--- a/settings.gradle
+++ b/settings.gradle
@@ -3,20 +3,8 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
-        maven { url 'https://jitpack.io' }
     }
 }
 
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
-    repositories {
-        google()
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
-    }
-}
-
-
-rootProject.name = "ElegantButtons"
+rootProject.name = 'ElegantButtons'
 include ':app'
-include ':ElegantButtonsLibrary'
